fixed overflow bug

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ p {
     margin: auto;
     margin-top: 50px;
     text-align: center;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
 }
 
 .container__heading {
